--- a/rtsupport/package.json
+++ b/rtsupport/package.json
@@ -4,6 +4,7 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "fecha": "^2.3.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "webpack": "^4.16.5",
